# container-utils

./: CMakeLists.txt  README.md  main.cpp
include/core/: list.h  map.h  math.h  multimap.h  multiset.h  pool_allocator.h  rbtree.h  rbtree_base.h  rbtree_multi.h  rbtree_node_handle.h  set.h  stream.h  util_algorithm.h  util_base.h  util_dllist.h  util_iterator.h  util_rbtree.h  util_regex.h  util_span.h  util_string.h  variant.h  vector.h  xml_parser.h
src/core/: math.cpp  pool_allocator.cpp  util_rbtree.cpp  util_string.cpp  variant.cpp  xml_parser.cpp
tests/: list_tests.cpp  rbtree_tests.cpp  string_tests.cpp  tests.h  util_tests.cpp  vector_tests.cpp
